# fletWikiPy

./: README.md  pyproject.toml  test.txt
wiki_py/: main.py
wiki_py/core/api/: funcs.py
wiki_py/core/db/: _db.py  models.py
wiki_py/core/wiki/: searcher.py
wiki_py/ui/: colors.json
wiki_py/ui/components/: search_field.py  wiki_content_viewer.py
wiki_py/ui/tools/: checker.py
