[tool.poetry]
name = "wiki-py"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "wiki_py"}]

[tool.poetry.dependencies]
python = "^3.11"
rich = "^13.5.2"
wikipedia = "^1.4.0"
sqlmodel = "^0.0.8"
flet = "^0.9.0"
lxml = "^4.9.3"
markdownify = "^0.11.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
